--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "Hoque"
-    ]
+    ],
+    "python.pythonPath": "C:\\Users\\email\\Anaconda3\\app\\python.exe"
 }
